FLUID-4970: More changes to scrolling/overflow issue. Moved hard-coded overflow styles out of js

--- a/src/webapp/components/uiOptions/css/FatPanelUIOptionsFrame.css
+++ b/src/webapp/components/uiOptions/css/FatPanelUIOptionsFrame.css
@@ -6,8 +6,7 @@
 }
 
 html {
-	overflow: scroll;
-	overflow-y: hidden;
+	overflow: visible;
 }
 
 .fl-uiOptions-fatPanel .fl-uiOptions {
